--- a/Places/app/build.gradle
+++ b/Places/app/build.gradle
@@ -31,6 +31,10 @@ android {
     }
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -43,4 +47,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Parse server backend
+    implementation "com.github.parse-community.Parse-SDK-Android:parse:1.26.0"
 }
