--- a/Places/app/src/main/AndroidManifest.xml
+++ b/Places/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Places">
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
 
         <meta-data
             android:name="com.parse.SERVER_URL"
@@ -26,7 +26,7 @@
             android:value="@string/back4app_client_key" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
