--- a/Places/app/build.gradle
+++ b/Places/app/build.gradle
@@ -36,6 +36,12 @@ repositories {
     maven { url 'https://jitpack.io' }
 }
 
+ext {
+    permissionDispatcherVersion = "4.7.0"
+    supportLibVersion = "1.0.0"
+    googlePlayVersion = "17.0.0"
+}
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -52,4 +58,10 @@ dependencies {
 
     // Parse server backend
     implementation "com.github.parse-community.Parse-SDK-Android:parse:1.26.0"
+
+    // Play services for Google Maps
+    implementation "com.google.android.gms:play-services-maps:$googlePlayVersion"
+    implementation "com.google.android.gms:play-services-location:$googlePlayVersion"
+    implementation "org.permissionsdispatcher:permissionsdispatcher:$permissionDispatcherVersion"
+    annotationProcessor "org.permissionsdispatcher:permissionsdispatcher-processor:$permissionDispatcherVersion"
 }
