--- a/Places/app/src/main/AndroidManifest.xml
+++ b/Places/app/src/main/AndroidManifest.xml
@@ -34,7 +34,10 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Places">
-        <activity android:name=".ProfileActivity"></activity>
+        <activity
+            android:name=".ProfileActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".CreatePlace"
             android:configChanges="orientation"
