PlaceDetailLayout done, doing Java code

--- a/Places/app/src/main/AndroidManifest.xml
+++ b/Places/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Places">
+        <activity android:name=".PlaceDetailActivity"></activity>
         <activity
             android:name=".ProfileActivity"
             android:configChanges="orientation"
