--- a/Places/app/src/main/AndroidManifest.xml
+++ b/Places/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Places">
-        <activity android:name=".TakePictureActivity"></activity>
+        <activity android:name=".SavedPlacesActivity"></activity>
+        <activity android:name=".TakePictureActivity" />
         <activity
             android:name=".PlaceDetailActivity"
             android:configChanges="orientation"
