--- a/Places/app/build.gradle
+++ b/Places/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
 
     // OneSignal
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
+
+    // AsyncHttpClient
+    implementation 'com.codepath.libraries:asynchttpclient:2.0.0'
 }
