--- a/Places/app/src/main/AndroidManifest.xml
+++ b/Places/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.places">
+    package="com.example.places"
+    android:targetSandboxVersion="1">
 
     <permission
         android:name="android.permission.ACCESS_FINE_LOCATION"
@@ -36,7 +37,9 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Places">
+        android:theme="@style/Theme.Places"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".FollowersActivity"
             android:configChanges="orientation"
