--- a/Places/app/build.gradle
+++ b/Places/app/build.gradle
@@ -88,4 +88,7 @@ dependencies {
 
     // AsyncHttpClient
     implementation 'com.codepath.libraries:asynchttpclient:2.0.0'
+
+    // Toasty
+    implementation 'com.github.GrenderG:Toasty:1.5.0'
 }
