--- a/Places/app/src/main/AndroidManifest.xml
+++ b/Places/app/src/main/AndroidManifest.xml
@@ -35,11 +35,12 @@
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Places"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true">
+        <activity android:name=".PromotionsActivity"></activity>
         <activity
             android:name=".FollowersActivity"
             android:configChanges="orientation"
